added rest for articles

--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -3,5 +3,10 @@
 {% block title %}Главная страница{% endblock %}
 
 {% block content %}
-  Здесь основной контент главной страницы
+
+  <div id="app">
+    [[ message ]]
+    And some text
+  </div>
+
 {% endblock %}
