--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}{% endblock %}</title>
-  <!-- development version, includes helpful console warnings -->
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <!-- production version, optimized for size and speed -->
-  {#  <script src="https://cdn.jsdelivr.net/npm/vue"></script>#}
+  {% load static %}
+  <script src="{% static 'js/vue.js' %}"></script>
 </head>
 <body>
   {% block content %}
   {% endblock %}
+  <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
